# eris

./: .gitignore  Cargo.toml  calc.rs  eris.rs
migrations/00000000000001_dynamic_prefixes/: up.sql
migrations/00000000000002_keyword_definition/: up.sql
migrations/00000000000003_character_tracking/: down.sql  up.sql
migrations/00000000000004_gm_tracking/: up.sql
migrations/00000000000005_character_notes/: up.sql
migrations/00000000000006_persistent_activity/: down.sql  up.sql
migrations/2018-02-18-200332_guilds/: down.sql  up.sql
migrations/2018-02-20-012936_character/: down.sql  up.sql
migrations/2018-07-20-221931_guild_prefixes/: up.sql
migrations/2018-07-20-221931_guild_prefixes/src/: schema.rs
migrations/2018-07-21-010915_memory/: down.sql  up.sql
migrations/2018-08-05-111856_memory-embeds/: down.sql  up.sql
migrations/2018-08-05-111856_memory-embeds/src/: schema.rs
migrations/2018-08-07-110844_channel_prefixes/: down.sql  up.sql
migrations/2018-09-21-100215_seen-ids/: down.sql  up.sql
src/: cmd.rs  data.rs  db.rs  eris.rs  errors.rs  ext.rs  framework.rs  handler.rs  key.rs  logger.rs  macros.rs  main.rs  model.rs  schema.rs  types.rs  util.rs  utils.rs
src/cmd/: admin.rs  gurps.rs  memory.rs  misc.rs  random.rs  roll.rs  util.rs
src/commands/: calc.rs  character.rs  dice.rs  gurps.rs  memory.rs  meta.rs  mod.rs  random.rs  toys.rs
src/db/: mod.rs  model.rs  schema.rs
src/ext/: ddate.rs  dice.rs  mod.rs
src/modules/: admin.rs  chartrack.rs  dice.rs  gurps.rs  logger.rs  memory.rs  mod.rs  random.rs  toys.rs  util.rs
