[package]
name = "eris"
version = "0.1.0"
authors = ["Celti Burroughs <celti@celti.name>"]
edition = "2018"

[dependencies]
chrono = "0.4"
ddate = "0.4"
diesel = { version = "1", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.13"
exitfailure = "0.5"
failure = "0.1"
fnorder = "1"
itertools = "0.7"
lazy_static = "1"
log = "0.4"
log-panics = "2"
maplit = "1"
phf = "0.7"
phf_macros = "0.7"
pretty_env_logger = "0.2"
r2d2 = "0.8"
r2d2-diesel = "1"
rand = "0.5"
regex = "1"
serde = "1"
serde_derive = "1"
serenity = "0.5"
systemd = "0.3"
tempfile = "3"
typemap = "0.3"
unicode-segmentation = "1"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }

[profile.release]
lto = true
codegen-units = 1
incremental = false
