[package]
name = "eris"
version = "0.1.0"
authors = ["Celti Burroughs <celti@celti.name>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
ddate = "0.4.0"
diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
dotenv = "0.14.1"
fnorder = "1.0.0"
humantime = "1.2.0"
itertools = "0.8.0"
lazy_format = "1.5.0"
lazy_static = "1.3.0"
log = "0.4.6"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
maplit = "1.0.1"
phf = "0.7.24"
pretty_env_logger = "0.3.0"
rand = "0.7.0"
regex = "1.1.7"
serde = "1.0.94"
serde_derive = "1.0.94"
serenity = "0.6.2"
sys-info = "0.5.7"
sysinfo = "0.9.0"
systemd = "0.4.0"
tempfile = "3.1.0"
unicode-segmentation = "1.3.0"

[profile.release]
lto = true
incremental = false
